com.github.lainsce.quilter (1.1.8) xenial; urgency=low

  * Fixed the saving/loading of files

 -- Lains <lainsce@airmail.cc>  Wed, 5 July 2017 19:33:00 -0300

com.github.lainsce.quilter (1.1.7) xenial; urgency=low

  * Bump for Glitched AppCenter release

 -- Lains <lainsce@airmail.cc>  Mon, 3 July 2017 01:12:00 -0300

com.github.lainsce.quilter (1.1.6) xenial; urgency=low

  * Bump for AppCenter

 -- Lains <lainsce@airmail.cc>  Sat, 1 July 2017 18:56:00 -0300

com.github.lainsce.quilter (1.1.5) xenial; urgency=low

  * Register Quilter with the plaintext & markdown mime types it uses.
  * Ability to choose Quilter in the Switchboard Applications Plug as an Text Editor.
  * New icons that respect the pixel grid.

 -- Lains <lainsce@airmail.cc>  Sat, 1 July 2017 18:36:00 -0300

com.github.lainsce.quilter (1.1.4) xenial; urgency=low

  * Speed up saving files.
  * Fix crash when no file is present at launch.
  * Fix crash when there's still no file at close.

 -- Lains <lainsce@airmail.cc>  Sun, 25 June 2017 14:56:00 -0300

com.github.lainsce.quilter (1.1.3) xenial; urgency=low

  * Save files when modified.
  * Watch for external changes.

 -- Lains <lainsce@airmail.cc>  Thu, 23 June 2017 14:40:00 -0300

com.github.lainsce.quilter (1.1.2) xenial; urgency=low

  * Reintroduce the font customization options.

 -- Lains <lainsce@airmail.cc>  Thu, 23 June 2017 12:40:00 -0300

com.github.lainsce.quilter (1.1.1) xenial; urgency=low

  * AppCenter monetization

 -- Lains <lainsce@airmail.cc>  Thu, 22 June 2017 09:55:00 -0300

com.github.lainsce.quilter (1.1.0) xenial; urgency=low

  * New Focus mode, makes text bigger and the toolbar more light.
  * Simplified the settings dialog.

 -- Lains <lainsce@airmail.cc>  Thu, 19 June 2017 08:55:00 -0300

com.github.lainsce.quilter (1.0.9) xenial; urgency=low

  * Fixed the saving of files before opening new ones.

 -- Lains <lainsce@airmail.cc>  Thu, 15 June 2017 01:55:00 -0300
